fix project's uneven card size

--- a/src/components/githubRepoCard/GithubRepoCard.css
+++ b/src/components/githubRepoCard/GithubRepoCard.css
@@ -4,7 +4,9 @@
   box-shadow: rgba(0, 0, 0, 0.2) 0px 10px 30px -15px;
   padding: 2rem;
   cursor: pointer;
+  height: 100%;
 }
+
 .repo-card-div:hover {
   box-shadow: rgba(0, 0, 0, 0.2) 0px 20px 30px -10px;
 }
@@ -75,7 +77,7 @@
 }
 
 .repo-details {
-  display:flex;
+  display: flex;
   flex-direction: row;
 }
 
